--- a/demos/index.html
+++ b/demos/index.html
@@ -137,6 +137,13 @@ limitations under the License.
                 <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_component_24px.svg"></span>
                 <span class="mdc-list-item__text">
                   Icon Button
+                  <span class="mdc-list-item__secondary-text">Icon buttons allow users to take actions, and make choices, with a single tap.</span>
+                </span>
+              </a>
+              <a role="listitem" class="mdc-list-item" href="icon-button-toggle.html">
+                <span class="demo-catalog-list-icon mdc-list-item__graphic"><img src="https://material-components-web.appspot.com/images/ic_component_24px.svg"></span>
+                <span class="mdc-list-item__text">
+                  Icon Button Toggle
                   <span class="mdc-list-item__secondary-text">Toggling icon states</span>
                 </span>
               </a>
