--- a/demos/radio.html
+++ b/demos/radio.html
@@ -28,16 +28,19 @@ limitations under the License.
   <header>
     <a href="index.html"><mwc-icon>arrow_back</mwc-icon>
     <span>Radio Button</span></a>
+    <style>
+      .pink {
+        --mdc-theme-secondary: #ff4081;
+      }
+    </style>
   </header>
 
   <main>
-    <mwc-radio id="s.1" name="s"></mwc-radio>
-    <mwc-radio id="s.2" name="s" checked></mwc-radio>
-    <mwc-radio id="s.3" name="s"></mwc-radio>
+    <mwc-radio id="a1" name="a" checked></mwc-radio>
+    <mwc-radio id="a2" name="a"></mwc-radio>
     <br>
-    <mwc-radio id="b.1" name="b"></mwc-radio>
-    <mwc-radio id="b.2" name="b"></mwc-radio>
-    <mwc-radio id="b.3" name="b" checked></mwc-radio>
+    <mwc-radio id="b1" name="b" class="pink"></mwc-radio>
+    <mwc-radio id="b2" name="b" checked class="pink"></mwc-radio>
   </main>
   <script>
     addEventListener('load', () => document.body.classList.remove('unresolved'));
