--- a/demos/textarea.html
+++ b/demos/textarea.html
@@ -17,7 +17,7 @@ limitations under the License.
 -->
 <html>
 <head>
-  <title>textfield demo</title>
+  <title>textarea demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script  src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
   <script type="module" src="../node_modules/@material/mwc-textarea/mwc-textarea.js"></script>
