--- a/demos/top-app-bars/fixed.html
+++ b/demos/top-app-bars/fixed.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<script type="module" src="../../node_modules/@material/mwc-top-app-bar/mwc-top-app-bar.js"></script>
+<script type="module" src="../../node_modules/@material/mwc-top-app-bar-fixed/mwc-top-app-bar-fixed.js"></script>
 <script type="module" src="../../node_modules/@material/mwc-icon-button/mwc-icon-button.js"></script>
 <link rel="stylesheet" href="./styling.css">
-<mwc-top-app-bar id="bar">
+<mwc-top-app-bar-fixed id="bar">
     <mwc-icon-button icon="menu" slot="navigationIcon"></mwc-icon-button>
-    <div slot="title" id="title">Standard</div>
+    <div slot="title" id="title">Fixed</div>
     <mwc-icon-button icon="file_download" slot="actionItems"></mwc-icon-button>
     <mwc-icon-button icon="print" slot="actionItems"></mwc-icon-button>
     <mwc-icon-button icon="favorite" slot="actionItems"></mwc-icon-button>
@@ -32,7 +32,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
-  </mwc-top-app-bar>
+  </mwc-top-app-bar-fixed>
   <script>
     const flags = {};
     // from url
@@ -41,10 +41,10 @@
       bar[parts[0]] = parts[1] || true;
     });
     if (bar.prominent || bar.dense) {
-      title.textContent = `${bar.prominent ? 'Prominent' : ''}${bar.dense && bar.prominent ? ' ' : ''}${bar.dense ? 'Dense' : ''}`;
+      title.textContent += ` ${bar.prominent ? 'Prominent' : ''}${bar.dense && bar.prominent ? ' ' : ''}${bar.dense ? 'Dense' : ''}`;
     }
     if (bar.custom) {
-      title.textContent = 'Custom Colors';
+      title.textContent += ' Custom Colors';
       bar.classList.add('custom');
     }
   </script>
