--- a/demos/top-app-bar-fixed.html
+++ b/demos/top-app-bar-fixed.html
@@ -24,7 +24,7 @@ limitations under the License.
   <link rel="stylesheet" href="demo-component.css">
   <style>
     iframe {
-      border: 1px solid gray;
+      border-width: 0;
       width: 500px;
       height: 400px;
       margin: 20px;
