--- a/demos/top-app-bars/short.html
+++ b/demos/top-app-bars/short.html
@@ -42,7 +42,7 @@
       title.textContent = '';
     }
     if (bar.custom) {
-      title.textContent += ' Custom Colors';
+      title.textContent = 'Custom Colors';
       bar.classList.add('custom');
     }
   </script>
