--- a/demos/top-app-bars/fixed.html
+++ b/demos/top-app-bars/fixed.html
@@ -5,8 +5,8 @@
 <mwc-top-app-bar-fixed id="bar">
     <mwc-icon-button icon="menu" slot="navigationIcon"></mwc-icon-button>
     <div slot="title" id="title">Fixed</div>
-    <mwc-icon-button icon="file_download" slot="actionItems"></mwc-icon-button>
-    <mwc-icon-button icon="print" slot="actionItems"></mwc-icon-button>
+    <mwc-icon-button icon="file_download" slot="actionItems" class="notCenter"></mwc-icon-button>
+    <mwc-icon-button icon="print" slot="actionItems" class="notCenter"></mwc-icon-button>
     <mwc-icon-button icon="favorite" slot="actionItems"></mwc-icon-button>
     <div id="content">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -46,5 +46,10 @@
     if (bar.custom) {
       title.textContent = 'Custom Colors';
       bar.classList.add('custom');
+    }
+    if (bar.centerTitle) {
+      for (const node of bar.querySelectorAll('.notCenter')) {
+        bar.removeChild(node);
+      }
     }
   </script>
