Address review feedback
- Add `centerTitle` property to README
- Remove reflection from centerTitle
- Add examples to demo

--- a/demos/top-app-bar-fixed.html
+++ b/demos/top-app-bar-fixed.html
@@ -40,8 +40,11 @@ limitations under the License.
     <span>Top App Bar Fixed</span>
   </header>
   <main>
-  <div>
+    <div>
       <iframe src="top-app-bars/fixed.html"></iframe>
+    </div>
+    <div>
+      <iframe src="top-app-bars/fixed.html?centerTitle"></iframe>
     </div>
     <div>
       <iframe src="top-app-bars/fixed.html?prominent"></iframe>
