--- a/demos/top-app-bar-short.html
+++ b/demos/top-app-bar-short.html
@@ -44,6 +44,9 @@ limitations under the License.
       <iframe src="top-app-bars/short.html"></iframe>
     </div>
     <div>
+      <iframe src="top-app-bars/short.html?centerTitle"></iframe>
+    </div>
+    <div>
       <iframe src="top-app-bars/short.html?alwaysCollapsed"></iframe>
     </div>
     <div>
