--- a/demos/top-app-bar.html
+++ b/demos/top-app-bar.html
@@ -45,6 +45,9 @@ limitations under the License.
       <iframe src="top-app-bars/standard.html"></iframe>
     </div>
     <div>
+      <iframe src="top-app-bars/standard.html?centerTitle"></iframe>
+    </div>
+    <div>
       <iframe src="top-app-bars/standard.html?dense"></iframe>
     </div>
     <div>
